helm/service-btc/ingress-btc-avg.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-btc-avg
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /average_price
        pathType: Prefix
        backend:
          service:
            name: service-btc
            port:
              number: 33133
