helm/service-btc/ingress-btc-current.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-btc-current
  namespace: backend
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /current_price
        pathType: Prefix
        backend:
          service:
            name: service-btc
            port:
              number: 33133
